# ALVR-Client-For-Pico-Neo-2

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  alvr_pico_main.cpp
app/src/main/java/top/playtbsxys/picostreamer/: PicoALVRActivity.java  SettingsActivity.java
app/src/main/res/layout/: activity_settings.xml
app/src/main/res/values/: strings.xml
